--- a/settingsmeta.json
+++ b/settingsmeta.json
@@ -47,6 +47,28 @@
                 ]
             },
             {
+                "name": "safe_mode",
+                "fields": [
+                    {
+                        "name": "safe_mode",
+                        "type": "checkbox",
+                        "label": "safe_mode",
+                        "value": "false"
+                    }
+                ]
+            },
+            {
+                "name": "ssl",
+                "fields": [
+                    {
+                        "name": "ssl",
+                        "type": "checkbox",
+                        "label": "ssl",
+                        "value": "false"
+                    }
+                ]
+            },
+            {
                 "name": "priority",
                 "fields": [
                     {
